site fix body overflow

--- a/packages/site/app.css
+++ b/packages/site/app.css
@@ -32,6 +32,7 @@ body {
 
 body {
   margin: 0;
+  overflow: hidden;
 }
 
 * {
